--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -24,6 +24,7 @@
     background: url(../img/bg01.jpg) no-repeat center top;
     background-size: cover;
 }
+#new{}
 
 /* swiper */
 .swiper-container {
@@ -482,6 +483,134 @@
     font-weight: bold;
 }
 
+/* 새로운 영화 */
+.new{
+    padding: 100px 0;
+    position: relative;
+}
+.new h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.new .new_left{
+    position: relative;
+    margin-right: 423px;
+    height: 500px;
+    background: #ccc url(../img/new01.jpg) center center;
+    background-size: cover;
+}
+.new .new_left .play{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 120px;
+    height: 120px;
+}
+.new .new_left .play .st0{
+    fill: #fff;
+    opacity: 0.3
+}
+.new .new_left .play .st1{
+    fill: #fff;
+}
+.new .new_right{
+    position: absolute;
+    right: 0;
+    top: 165px;
+    width: 400px;
+    height: 500px;
+    padding: 34px;
+    box-sizing: border-box;
+    background: #f0f0f0;
+}
+.new .new_right .title{
+    font-size: 28px;
+    color: #000;
+}
+.new .new_right .release{
+    font-size: 12px;
+    color: #333;
+}
+.new .new_right .star{
+    padding: 13px 0;
+}
+.new .new_right .star strong{
+    font-size: 15px;
+    padding-left: 5px;
+}
+.new .new_right .star span{
+    display: inline-block;
+    width: 20px;
+    height: 20px; 
+    vertical-align: -3px; /* 글자는 적용되지 않기 때문에 span에 적용 */
+}
+.new .new_right .star .star1{
+    background-position: -393px 0;
+}
+.new .new_right .star .star2{
+    background-position: -412px 0;
+}
+.new .new_right .star .star0{
+    background-position: -374px 0;
+}
+.new .new_right .summary{
+    font-size: 14px;
+}
+.new .new_right .genre{
+    padding-bottom: 3px;
+}
+.new .new_right .age{
+    padding-bottom: 10px;
+}
+.new .new_right .desc{
+    height: 108px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+.new .new_right .select{
+    overflow: hidden;
+}
+.new .new_right .select .s1{
+    float: left;
+    width: 49%;
+    margin-right: 2%;
+}
+.new .new_right .select .s2{
+    float: left;
+    width: 49%;
+}
+.new .new_right .select .s3{
+    float: left;
+    width: 100%;
+    margin-top: 2%;
+}
+.new .new_right .btn{
+    overflow: hidden;
+    margin-top: 2%;
+    text-align: center;
+}
+.new .new_right .btn a{
+    float: left;
+    width: 49%;
+    box-sizing: border-box;
+    display: block;
+    padding: 10px 30px 12px 30px;
+}
+.new .new_right .btn a.white{
+    background-color: #fff;
+    margin-right: 2%;
+    color: #3a0e6a;
+    border: 1px solid #3a0e6a;
+}
+.new .new_right .btn a.purple{
+    background-color: #3a0e6a;
+    color: #fff;
+    border: 1px solid #6e40c4;
+}
+
+
 
 
 @media (max-width: 1290px){
@@ -555,12 +684,24 @@
         font-size: 16px;
         padding-top: 35px;
     }
+
     .movie_title ul{
         width: auto;
     }
     .movie_title li{
         width: 25%;
         box-sizing: border-box;
+    }
+
+    .opening{
+        padding: 50px 0;
+    }
+    .opening .open_box{
+        display: none;
+    }
+    .opening .desc{
+        font-size: 25px;
+        background: none;
     }
 }
 
@@ -663,6 +804,11 @@
     .event .event_right{
         display: none;
     }
+
+    #opening{
+        margin: 0;
+    }
+    
 }
 
 @media (max-width: 600px){
@@ -797,6 +943,30 @@
     .event h2{
         font-size: 18px;
         margin-bottom: 10px;
+    }
+
+    #opening{
+        margin: 8px 0;
+    }
+    .opening{
+        padding: 20px 0;
+    }
+    .opening h2{
+        margin-bottom: 10px;
+    }
+    .opening h2 .grand{
+        background-size: 300px;
+        background-position: 0 -105px;
+        width: 197px;
+        height: 24px;
+    }
+    .opening .date{
+        display: none;
+    }
+    .opening .desc{
+        font-size: 16px;
+        font-weight: 400;
+        padding-bottom: 0;
     }
 }
 
