--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -24,7 +24,6 @@
     background: url(../img/bg01.jpg) no-repeat center top;
     background-size: cover;
 }
-#new{}
 
 /* swiper */
 .swiper-container {
@@ -610,6 +609,168 @@
     border: 1px solid #6e40c4;
 }
 
+/* help */
+.help{
+    overflow: hidden;
+}
+.help article{
+    float: left;
+    width: 32%;
+    margin-right: 2%;
+    height: 350px;
+}
+.help article > div{
+    border: 1px solid #dbdbdb;
+    height: 350px;
+}
+.help article.help_box3{
+    margin-right: 0;
+}
+.help article.help_box3 > div{
+    border: 0;
+}
+.help article h3{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+/* 공지사항 */
+.notice{
+    position: relative;
+    padding: 17px;
+}
+.notice ul{
+    overflow: hidden;
+}
+.notice ul li{
+    float: left;
+    text-align: center;
+    margin-right: -1px;
+}
+.notice ul li a{
+    border: 1px solid #dbdbdb;
+    font-size: 15px;
+    color: #666;
+    display: block;
+    width: 80px;
+    padding: 10px 20px;
+    background-color: #f5f5f5;
+}
+.notice ul li.actice a{
+    background: #fff;
+}
+.notice ul li ul{
+    position: absolute;
+    left: 17px;
+    top: 70px;
+    width: 90%;
+}
+.notice li ul li{
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
+    padding: 17px;
+    border-bottom: 1px solid #dbdbdb;
+}
+.notice li ul li:last-child{
+    border-bottom: 0;
+}
+.notice li ul li dt em{
+    color: #999;
+}
+.notice li ul li dt{
+    position: relative;
+}
+.notice li ul li dt .bar{
+    position: relative;
+    padding-right: 14px;
+}
+.notice li ul li dt .bar::after{
+    content: '';
+    position: absolute;
+    right: 4px;
+    top: 5px;
+    width: 1px;
+    height: 10px;
+    background: #999;
+}
+.notice li ul li dd{
+    color: #777;
+    padding-top: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/* 할인카드 */
+.card{
+    padding: 17px;
+}
+.card ul li{
+    position: relative;
+    border: 1px solid #d7d7d7;
+    padding: 17px;
+    margin-bottom: 17px;
+    min-height: 102px;
+    box-sizing: border-box;
+}
+.card ul li span{
+    position: absolute;
+    left: 17px;
+    top: 17px;
+}
+.card ul li span img{
+    width: 105px;
+}
+.card ul li strong{
+    display: block;
+    font-size: 18px;
+    color: #777;
+    padding-left: 120px;
+}
+.card ul li em{
+    display: block;
+    font-size: 14px;
+    padding-left: 120px;
+    color: #777;
+    font-weight: 300;
+}
+
+/* 고객센터 */
+.service{
+    overflow: hidden;
+}
+.service li{
+    float: left;
+    width: 50%;
+    height: 193px;
+    box-sizing: border-box;
+    border: 1px solid #d7d7d7;
+    text-align: center;
+}
+.service li a span{
+    display: block;
+    width: 120px;
+    height: 120px;
+    margin: 20px auto 0 auto;
+    overflow: hidden;
+}
+.service li a strong{
+    color: #666;
+    font-size: 18px;
+    font-weight: 500;
+}
+.service li:nth-child(1){
+    border-right: 0;
+    border-bottom: 0;
+}
+.service li:nth-child(2){
+    border-bottom: 0;
+}
+.service li:nth-child(3){
+    border-right: 0;
+}
 
 
 
@@ -663,6 +824,38 @@
     .banner_menu .bm_right ul:first-child{
         display: none;
     }
+
+    .help article.help_box1{
+        width: 49%;
+        margin-right: 2%;
+    }
+    .help article.help_box2{
+        width: 49%;
+        margin-right: 0;
+    }
+    .help article.help_box3{
+        width: 100%;
+        margin-top: 2%;
+    }
+    .help article{
+        height: auto;
+    }
+    .service li{
+        width: 25%;
+        height: auto;
+    }
+    .service li:nth-child(1){
+        border-bottom: 1px solid #d7d7d7;
+    }
+    .service li:nth-child(2){
+        border-bottom: 1px solid #d7d7d7;
+        border-right: 0;
+    }
+    .service li a strong{
+        padding-bottom: 10%;
+        display: block;
+    }
+
 }
 
 @media (max-width: 960px){
@@ -702,6 +895,17 @@
     .opening .desc{
         font-size: 25px;
         background: none;
+    }
+
+    .new .new_left{
+        margin-right: 0;
+        height: 400px;
+    }
+    .new .new_right{
+        position: relative;
+        top: 0;
+        width: 100%;
+        height: auto;
     }
 }
 
@@ -809,6 +1013,75 @@
         margin: 0;
     }
     
+    #new .row{
+        padding: 0 24px;
+    }
+    .new{
+        margin-top: 24px;
+        padding: 24px;
+        background-color: #fff;
+    }
+    .new h2{
+        font-size: 24px;
+        font-weight: 700;
+        height: 27px;
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+    }
+    .new .new_right{
+        padding: 24px;
+    }
+
+    #help .row{
+        padding: 0 24px;
+    }
+    .help article.help_box1{
+        box-sizing: border-box;
+        padding: 24px;
+        width: 100%;
+        background: #fff;
+        margin-right: 0;
+        margin-top: 24px;
+    }
+    .help article.help_box2{
+        box-sizing: border-box;
+        padding: 24px;
+        width: 100%;
+        background: #fff;
+        margin-right: 0;
+        margin-top: 24px;
+    }
+    .help article.help_box3{
+        padding: 24px;
+        width: 100%;
+        background: #fff;
+        margin-top: 0;
+        margin-top: 24px;
+    }
+    .help article.help_box1 h3{
+        font-size: 24px;
+        font-weight: 700;
+        height: 27px;
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+    }
+    .help article.help_box2 h3{
+        font-size: 24px;
+        font-weight: 700;
+        height: 27px;
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+    }
+    .help article.help_box3 h3{
+        display: none;
+    }
+    .help article.help_box3 > div{
+        height: auto;
+    }
+    .service li{
+        border: 0;
+    }
+
 }
 
 @media (max-width: 600px){
@@ -967,6 +1240,73 @@
         font-size: 16px;
         font-weight: 400;
         padding-bottom: 0;
+    }
+
+    #new .row{
+        padding: 0 8px;
+    }
+    .new{
+        padding: 16px;
+        margin-top: 8px;
+    }
+    .new h2{
+        font-size: 18px;
+        margin-bottom: 0;
+    }
+    .new .new_left{
+        height: 300px;
+    }
+    .new .new_right{
+        padding: 17px;
+    }
+    .new .new_right .title{
+        font-size: 22px;
+    }
+    .new .new_right .star{
+        padding: 9px 0;
+    }
+    .new .new_right .select .s1{
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 2%;
+    }
+    .new .new_right .select .s2{
+        width: 100%;
+    }
+
+    #help .row{
+        padding: 0 8px;
+    }
+    .help article.help_box1{
+        margin-top: 8px;
+        padding: 16px;
+    }
+    .help article.help_box2{
+        margin-top: 8px;
+        padding: 16px;
+    }
+    .help article.help_box2{
+        margin-top: 8px;
+    }
+    .help article.help_box1 h3{
+        font-size: 18px;
+        margin-bottom: 0;
+    }
+    .help article.help_box2 h3{
+        font-size: 18px;
+        margin-bottom: 0;
+    }
+    .card{
+        padding: 8px;
+    }
+    .service li{
+        width: 50%;
+    }
+    .service li:nth-child(1){
+        border-right: 1px solid #d7d7d7;
+    }
+    .service li:nth-child(3){
+        border-right: 1px solid #d7d7d7;
     }
 }
 
