--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,5 +1,26 @@
 @charset "utf-8";
 
+/* 스킵메뉴 */
+#skip{
+    position: relative;
+}
+#skip a{
+    position: absolute;
+    left: 0;
+    top: -40px;
+    width: 140px;
+    line-height: 30px;
+    border: 1px solid #fff;
+    color: #fff;
+    text-align: center;
+    background: #333;
+}
+#skip a:active,
+#skip a:focus{
+    top: 0;
+}
+
+
 /* 레이아웃 */
 #header {
     width: 100%;
@@ -23,6 +44,9 @@
     margin: 17px 0;
     background: url(../img/bg01.jpg) no-repeat center top;
     background-size: cover;
+}
+#footer{
+    background: #211f1f;
 }
 
 /* swiper */
@@ -612,6 +636,7 @@
 /* help */
 .help{
     overflow: hidden;
+    padding-bottom: 200px;
 }
 .help article{
     float: left;
@@ -679,9 +704,6 @@
 .notice li ul li dt em{
     color: #999;
 }
-.notice li ul li dt{
-    position: relative;
-}
 .notice li ul li dt .bar{
     position: relative;
     padding-right: 14px;
@@ -698,6 +720,11 @@
 .notice li ul li dd{
     color: #777;
     padding-top: 3px;
+}
+.notice ul li ul li a{
+    border: 0;
+    padding: 0;
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -771,6 +798,103 @@
 .service li:nth-child(3){
     border-right: 0;
 }
+
+/* 푸터 */
+.footer_sns{
+    position: absolute;
+    right: 17px;
+    top: 33px;
+    z-index: 1;
+}
+.footer_sns li{
+    display: inline-block;
+    margin: 0 2px;
+}
+.footer_sns li a{
+    display: block;
+    width: 36px;
+    height: 36px;
+}
+.footer_sns li.s1{
+    background-position: 0 -375px;
+}
+.footer_sns li.s2{
+    background-position: -36px -375px;
+}
+.footer_sns li.s3{
+    background-position: -72px -375px;
+}
+.footer_sns li.s4{
+    background-position: -108px -375px;
+}
+.footer_sns li.s5{
+    background-position: -144px -375px;
+}
+.footer_sns li.s1:hover{
+    background-position: 0 -411px;
+}
+.footer_sns li.s2:hover{
+    background-position: -36px -411px;
+}
+.footer_sns li.s3:hover{
+    background-position: -72px -411px;
+}
+.footer_sns li.s4:hover{
+    background-position: -108px -411px;
+}
+.footer_sns li.s5:hover{
+    background-position: -144px -411px;
+}
+.footer_sns .tel{
+    text-align: right;
+    padding-top: 5px;
+}
+.footer_sns .tel a{
+    color: #8f8f8f;
+    font-size: 21px;
+}
+.footer_sns .tel a em{
+    color: #fff;
+}
+
+
+
+.footer_info{
+    padding: 50px 0;
+    width: 80%;
+}
+.footer_info ul{
+    padding: 15px 0;
+}
+.footer_info ul li{
+    position: relative;
+    display: inline;
+    padding-right: 16px;
+    white-space: nowrap;
+}
+.footer_info ul li::after{
+    content: '';
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    width: 1px;height: 11px;
+    background-color: #8f8f8f;
+}
+.footer_info li:last-child::after{
+    width: 0;
+    height: 0;
+}
+.footer_info h2 img{
+    width: 150px;
+}
+.footer_info li a{
+    color: #8f8f8f;
+}
+.footer_info address p{
+    color: #8f8f8f;
+    padding-bottom: 15px;
+}
+
 
 
 
@@ -906,6 +1030,24 @@
         top: 0;
         width: 100%;
         height: auto;
+    }
+
+    .help{
+        padding-bottom: 0;
+    }
+
+    .footer_sns{
+        position: static;
+        text-align: center; /* inline구조라 먹힌다 */
+        background: #352c2c;
+        padding-bottom: 15px;
+    }
+    .footer_sns .tel{
+        display: none;
+    }
+    .footer_info{
+        width: 100%;
+        text-align: center;
     }
 }
 
@@ -1052,7 +1194,7 @@
         margin-top: 24px;
     }
     .help article.help_box3{
-        padding: 24px;
+        /* padding: 24px; */
         width: 100%;
         background: #fff;
         margin-top: 0;
@@ -1080,6 +1222,12 @@
     }
     .service li{
         border: 0;
+    }
+    .service li:nth-child(1){
+        border-bottom: 0;
+    }
+    .service li:nth-child(1){
+        border-bottom: 0;
     }
 
 }
@@ -1304,6 +1452,10 @@
     }
     .service li:nth-child(1){
         border-right: 1px solid #d7d7d7;
+        border-bottom: 1px solid #d7d7d7;
+    }
+    .service li:nth-child(2){
+        border-bottom: 1px solid #d7d7d7;
     }
     .service li:nth-child(3){
         border-right: 1px solid #d7d7d7;
